Fixes gap in template border at mobile

--- a/less/template-styles.less
+++ b/less/template-styles.less
@@ -30,7 +30,7 @@
     padding-top: 80px;
 
     @media @mobile {
-        margin-top: 40px;
+        padding-top: 40px;
     }
 }
 
